# Zenith-Sentry

./: .gitignore  .trufflehogignore  LICENSE  README.md  RELEASE_NOTES.md  config.yaml  gui.py  install.sh  install_ebpf_deps.sh  main.py  process_execve_monitor.py  pyproject.toml  requirements.in  requirements.txt  start-web.sh  start.sh  zenith-sentry.service
.github/workflows/: ci.yml  security.yml
.review/: README_v1_record.md
docs/: architecture.md  deployment.md  security.md  troubleshooting.md
docs/releases/: v2.1.1.md
tests/: __init__.py  conftest.py  test_collectors.py  test_detectors.py  test_engine.py
web/: index.html  server.py
web/static/: app.js  style.css
zenith/: __init__.py  collectors.py  config.py  core.py  engine.py  registry.py  utils.py
zenith/api/: __init__.py  auth.py  main.py  models.py
zenith/api/routes/: __init__.py  _shared.py  defense.py  findings.py  scans.py  system.py
zenith/cli/: __init__.py  main.py
zenith/config/: paths.py
zenith/db/: __init__.py  base.py  models.py  repository.py  retention.py
zenith/ebpf/: EBPF_GUIDE.md  README.md  execve_monitor.c
zenith/monitoring/: __init__.py  alerts.py  health.py  metrics.py
zenith/plugins/: base.py  detectors.py  ebpf_detector.py
zenith/scripts/: backup.py  restore.py  verify_install.py
zenith/security/: encryption.py  event_logger.py
zenith/utils/: logging.py  signals.py  validation.py
